@@ -1,41 +1,46 @@
 # JavaFX Calendar App
 
-A lightweight desktop calendar application built with Java and JavaFX (FXML).
+A lightweight desktop calendar application built with Java, JavaFX (FXML), and Maven.
 
 ## 🚀 Features
 - **Monthly View**: Clean visual layout for date navigation.
 - **Event Management**: Interface for viewing and managing events.
-- **MVC Architecture**: Clean separation between UI (`.fxml`), application controller, and data model.
+- **MVC Architecture**: Clean separation between UI (`.fxml`), application controller, and business logic.
+- **Zero-Config Setup**: Includes Maven Wrapper – no manual JavaFX SDK installation or path configuration required.
 
 ## 🛠️ Built With
-- **Java**
-- **JavaFX** (FXML layout)
+- **Java 21**
+- **JavaFX 21** (FXML layout)
+- **Maven** (with Maven Wrapper)
 
 ## 📁 Project Structure
 ```text
 Calendar/
-├── .gitignore
+├── .mvn/
+├── mvnw
+├── mvnw.cmd
+├── pom.xml
 ├── README.md
+├── .gitignore
 └── src/
-    ├── CalendarMain.java
-    ├── CalendarController.java
-    ├── Event.java
-    └── calendar.fxml
+    └── main/
+        ├── java/
+        │   ├── CalendarMain.java
+        │   ├── CalendarController.java
+        │   └── Logic.java
+        └── resources/
+            └── calendar.fxml
 ```
+
 
 ## 🏁 Getting Started
 
 ### Prerequisites
-* **Java Development Kit (JDK 11+)**
-* **JavaFX SDK** (if not bundled with your JDK)
+* **Java Development Kit (JDK 21 or higher)**
 
 ### Running the Application
+Open your terminal, navigate to the project root directory, and run:
 
-#### Option 1: Via IDE (Recommended)
-Import the folder into **IntelliJ IDEA**, **Eclipse**, or **VS Code**, configure JavaFX libraries if needed, and run `CalendarMain.java`.
-
-#### Option 2: Via Terminal
 ```bash
-cd src
-javac --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml *.java
-java --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml CalendarMain
+./mvnw javafx:run
+```
